Fix: wrong color on header

--- a/assets/includes/css/contato.css
+++ b/assets/includes/css/contato.css
@@ -1,7 +1,7 @@
 /* Base Styles */
 
 :root {
-    --primary-color: #ffcc00;
+    --primary-color: #ffffff;
     --primary-dark: #e6b800;
     --secondary-color: #0a2463;
     --accent-color: #3e92cc;
